fixed the break points and styling for the jumbotron so that the request a quite button is no longer getting covered.

--- a/client/src/components/Home/Home.scss
+++ b/client/src/components/Home/Home.scss
@@ -31,14 +31,14 @@ html, body {
 
 .home-top-text{
     position:relative;
-    padding-top: 9em;
+    padding-top: 25vh;
     padding-left:30vw;
     padding-right:30vw;
     padding-bottom:1.5em;
     font-size: 1.3rem;
     font-family: 'PT Sans Narrow', sans-serif;
     color:#d8d8d8d0;
-    top: -103vh;
+    top: -113vh;
     opacity:1;
     z-index:2;
 }
@@ -59,7 +59,7 @@ html, body {
     width:8%;
     height:auto;
     position: relative;
-    top: -83vh;
+    top: -93vh;
 }
 
 .Logoo{
@@ -67,21 +67,22 @@ html, body {
     width:20%;
     height:auto;
     position:relative;
-    top: -82vh;
+    top: -92vh;
 }
 
 .contact-Button-Home{
     position: relative;
-    top:-103vh;
+    top:-113vh;
     border-radius: 0 !important;
+    height: 8vh;
 }
 
 @media(max-width:768px){
     .Logo{
-        width:20%;
+        width:10%;
     }
     .Logoo{
-        width:40%;
+        width:30%;
     }
 
 }
