--- a/client/src/components/Home/ServicesHome.scss
+++ b/client/src/components/Home/ServicesHome.scss
@@ -1,11 +1,15 @@
 .top-services-row {
     padding-top: 5vh;
     padding-bottom: 5vh;
+    padding-left: 3vw;
+    padding-right: 3vw;
 }
 
 .services-row {
     padding-top: 5vh;
     padding-bottom: 5vh;
+    padding-left: 3vw;
+    padding-right: 3vw;
 }
 
 .services-label {
@@ -16,6 +20,7 @@
 
 .services-container {
     padding-top: 5vh;
+    padding-bottom : 5vh;
   
 }
 
